...
                    ) {
                        TextField(
                            value = newMessage,
                            onValueChange = viewModel::updateNewMessage,
                            placeholder = { 
                                Text(
                                    "Type a message...",
                                    color = Color.Gray
                                ) 
                            },
                            modifier = Modifier.fillMaxWidth(),
                            colors = TextFieldDefaults.textFieldColors(
                                backgroundColor = Color.Transparent,
...
